# GravitationalWavesAnalyser

./: BasicFrame.cpp  BasicFrame.h  CMakeLists.txt  DataStorage.cpp  DataStorage.h  ErrorHandler.cpp  ErrorHandler.h  GeometryDefines.cpp  GeometryDefines.h  GravOut.asc  Gravitationswelle.vcxproj  Gravitationswelle.vcxproj.filters  HeightmapExporter.cpp  HeightmapExporter.h  Parser.cpp  Parser.h  PointBinaryTreeSort.cpp  PointBinaryTreeSort.h  Render.cpp  Render.h  SharedDefines.h  StlExporter.cpp  StlExporter.h  Triangulation.cpp  Triangulation.h  main.cpp  main.h
Debug/: basicframe.obj.enc  heightmapexporter.obj.enc  render.obj.enc
Debug/Gravitat.33A3069C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gravitationswelle.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/Gravitat.33A3069C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gravitationswelle.lastbuildstate
poly2tri/common/: shapes.cc  shapes.h  utils.h
poly2tri/sweep/: sweep.cc
